Backend/Temp/compile_error.txt
solution.cpp: In function 'int main()':
solution.cpp:3:22: error: expected initializer before '>>' token
    3 | int main(){int a,bcin>>a>>b;cout<<a+b;}
      |                      ^~
solution.cpp:3:37: error: 'b' was not declared in this scope
    3 | int main(){int a,bcin>>a>>b;cout<<a+b;}
      |                                     ^
